--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,9 @@
 <h2 class="title"><%= @product.title %></h2>
 <p class="description"><%= @product.description %></p>
 <p class="price"><%= @product.price %>€</p>
+
+<p><%= link_to 'Editar producto', edit_product_path(@product) %></p>
+<p><%= link_to 'Eliminar producto', product_path(@product), data: { turbo_method: :delete, turbo_confirm: '¿Estás seguro?' } %></p>
+<!-- Por defecto Rails usa el método HTTP GET por defecto. Para borrar un producto necesito el método DELETE. Tengo que declararlo. Rails 7 usa Turbo para hacerlo. -->
+
 <p><%= link_to 'Ver todos los productos', products_path %></p>
