--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,4 +3,4 @@
   <h1>Vendelo</h1>
 <% end %>
 
-<%= link_to 'Añadir producto', new_product_path %>
+<%= link_to t('common.add'), new_product_path %>
