create category model

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,7 @@
 
-<%= link_to products_path do %>
-  <h1>Vendelo</h1>
+<%= link_to root_path do %>
+  <h1><%= t('.title') %></h1>
 <% end %>
 
-<%= link_to t('common.add'), new_product_path %>
+<%= link_to t('.add_product'), new_product_path %>
+<%= link_to t('.see_categories'), categories_path %>
