--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -7,8 +7,8 @@
 <p class="description"><%= @product.description %></p>
 <p class="price"><%= @product.price %>€</p>
 
-<p><%= link_to t('common.edit'), edit_product_path(@product) %></p>
-<p><%= link_to t('common.delete'), product_path(@product), data: { turbo_method: :delete, turbo_confirm: t('common.confirm_message') } %></p>
+<p><%= link_to t('.edit'), edit_product_path(@product) %></p>
+<p><%= link_to t('.delete'), product_path(@product), data: { turbo_method: :delete, turbo_confirm: t('common.confirm_message') } %></p>
 <!-- Por defecto Rails usa el método HTTP GET por defecto. Para borrar un producto necesito el método DELETE. Tengo que declararlo. Rails 7 usa Turbo para hacerlo. -->
 
-<p><%= link_to t('common.ver_todos'), products_path %></p>
+<p><%= link_to t('common.back'), products_path %></p>
