--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <%= link_to product_path(product.id), class:"product" do %>
+  <%= link_to product_path(product.id), class:"product", 'data-turbo-frame': '_top' do %>
     <%= image_tag product.photo, width: 200 if product.photo.attached? %>
     <h2><%= product.title %></h2>
     <p><%= product.price %>€</p>
