--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,10 @@
-<h2><%= t('.title') %></h1>
+<%= turbo_frame_tag 'categories' do %>
 
-<%= render partial: 'product', collection: @products %>
+  <h2><%= t('.title') %></h1>
+
+  <%= link_to t('.all'), products_path %>
+  <%= render partial: 'category', collection: @categories %>
+  
+  <%= render partial: 'product', collection: @products %>
+
+<% end %>
