--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,6 +2,18 @@
 
   <h2><%= t('.title') %></h1>
 
+  <%= form_with url: products_path, method: :get do |form| %>
+    
+    <div>
+      <%= form.number_field :min_price, placeholder: t('.min_price'), onChange: 'this.form.requestSubmit()', value: params[:min_price] %>
+    </div>
+    
+    <div>
+      <%= form.number_field :max_price, placeholder: t('.max_price'), onChange: 'this.form.requestSubmit()', value: params[:max_price]  %>
+    </div>
+
+  <% end %>
+
   <%= link_to t('.all'), products_path %>
   <%= render partial: 'category', collection: @categories %>
   
