--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,7 +3,11 @@
   <h2><%= t('.title') %></h1>
 
   <%= form_with url: products_path, method: :get do |form| %>
-    
+   
+    <div>
+      <%= form.text_field :query_text, placeholder: t('.query_text'), onChange: 'this.form.requestSubmit()', value: params[:query_text] %>
+    </div>
+
     <div>
       <%= form.number_field :min_price, placeholder: t('.min_price'), onChange: 'this.form.requestSubmit()', value: params[:min_price] %>
     </div>
