--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 
 <%= link_to products_path do %>
-  <h1><%= t('.title') %></h1>
+  <h1><%= t('app_name') %></h1>
 <% end %>
 
 <%= link_to t('.add_product'), new_product_path %>
