--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -3,3 +3,5 @@
     <h2><%= product.title %></h2>
     <p><%= product.price %>€</p>
 <% end %>
+
+<p><%= t('.owner_text') %> <b><%= product.user.username %></b></p>
