--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,8 @@
     -->
     <%= render 'shared/flash' %>
     <%= render 'shared/header' %>
-    <%= yield %>
+    <div class="container mx-auto">
+      <%= yield %>
+    </div>
   </body>
 </html>
