--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,20 +1,20 @@
-<div class="bg-white flex justify-between items-center px-2 py-4 mb-4">
+<div class="bg-white flex justify-between items-center px-2 py-4 mb-4" data-controller="menu">
   <%= link_to products_path do %>
     <h1 class="text-2xl font-bold text-green-700"><%= t('app_name') %></h1>
   <% end %>
 
-  <div>
-    <%= link_to t('.add_product'), new_product_path, class:"mx-2 font-bold" if Current.user %>
-    <%= link_to t('.see_categories'), categories_path, class:"mx-2 font-bold" if Current.user&.admin? %>
+  <button class="sm:hidden" data-action="click->menu#toggle"><%= image_tag 'icons/menu.svg', width: 35, height: 35 %></button>
 
-    <%= link_to t('common.login'), new_session_path, class:"mx-2 font-bold" unless Current.user %>
-    <%= link_to t('common.signin'), new_user_path, class:"mx-2 font-bold" unless Current.user %>
-      
-    <%= link_to t('common.logout'), session_path(Current.user.id), class:"mx-2 font-bold", data: {
-      turbo_method: :delete, 
-      turbo_confirm: t('common.confirm_message')
-      } if Current.user %>
+  <div class="hidden sm:block">
+    <%= render partial: 'shared/menu_items' %>
   </div>
+
+  <!-- Menu mobile -->
+  <div class="gap-4 sm:hidden absolute bg-white top-0 right-0 shadow z-10 h-full flex flex-col min-w-[45%] overflow-y-scroll ease-in-out duration-200 p-5 translate-x-full" data-menu-target="items">
+    <button class="mb-4" data-action="click->menu#toggle"><%= image_tag 'icons/close.svg', width: 35, height: 35 %></button>
+    <%= render partial: 'shared/menu_items' %>
+  </div>
+
 </div>
 
 <!--
